# backseat-interpreter

./: .gitignore  CMakeLists.txt  dependencies.cmake  project_options.cmake  source.bs  test.hpp
src/: CMakeLists.txt  main.cpp
src/interpreter/: CMakeLists.txt  error.hpp  interpreter.hpp  main.cpp  values.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp  regex.hpp  source_location.hpp  token.hpp  token_definitions.hpp
src/lexer/include/lexer/: token.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser_table.hpp  precedence.hpp
src/parser/include/parser/: error.hpp  expressions.hpp  parser.hpp  statements.hpp
src/pattern_generator/: CMakeLists.txt  char_mask.hpp  main.cpp  pattern.hpp  pattern_merging.hpp  regex.hpp  sequence_parser.hpp  token_definitions.hpp
src/token_types/: CMakeLists.txt  token_type.hpp
src/type_checker/: CMakeLists.txt  checking.hpp  data_type.cpp  statements.cpp  type_checker.cpp
src/type_checker/include/type_checker/: data_type.hpp  errors.hpp  expressions.hpp  statements.hpp  type_checker.hpp
src/utils/: CMakeLists.txt  concepts.hpp  utils.hpp
src/utils/include/utils/: colors.hpp  enum_to_string.hpp  files.hpp  pretty_printer.hpp
